# phageforge

./: .gitignore  README.md  pyproject.toml
data/cached_embeddings/: structural_plus_reference_index.csv  structural_reference_embeddings.npy  structural_reference_index.csv
phageforge/data/: build_dataset.py  download.py
results/: benchmark_manifest.json  benchmark_report.md  summary.csv  summary_aggregate.csv
results/analysis/: final_analysis_summary.csv  runs_detailed_summary.csv  runs_grouped_summary.csv
results/analysis/validity/: best_validated_candidate_per_run.csv  best_validated_candidates_per_target.csv  final_report.md  final_shortlist_summary.csv  final_validated_shortlist.csv  mutation_local_pll.csv  strict_reference_neighbors.csv  validated_pool_ranked.csv  validity_run_metadata.json  validity_summary_by_run.csv
results/phaseA/: phaseA_family_members.csv  phaseA_hotspots_by_target.csv  phaseA_plan.json  phaseA_target_reference_summary.csv
scripts/: 01_build_dataset.py  01b_filter_strict_rbps.py  01c_structural_filter_rbps.py  01d_build_structural_plus_rbps.py  02_embed_rbps.py  02b_cache_reference_embeddings.py  03_train_phi_mlp.py  03b_linear_probe.py  03c_run_benchmark.py  03d_make_benchmark_report.py  04_optimize_rbp_for_host.py  04b_summarize_design_run.py  04c_compare_seed_to_candidates.py  05_compute_validity_metrics.py  05b_rank_validated_candidates.py  05c_make_validity_report.py  06a_select_phaseA_family.py  06b_optimize_family_constrained.py  06c_pick_phaseA_followup_seed.py
(+921 files in other folders)
