[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phageforge"
version = "0.1.0"
description = "RBP-based phage-host prediction + host-conditioned design"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "tqdm>=4.66",
  "biopython>=1.81",
  "requests>=2.31",
  "torch",
  "transformers>=4.40",
  "accelerate",
  "scikit-learn>=1.3",
]

[tool.setuptools]
# IMPORTANT: only package phageforge (avoid picking up data/)
packages = ["phageforge"]

# Optional: include non-python files inside phageforge if you later add any
include-package-data = true